--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" type="text/css" href="./CSS/style.css"> 
 </head>
 <body>
+    <header>
+        <nav class="navbar">
+            <div class="max-width">
+              <div class="logo"><a href="#">Port<span>folio</span></a></div>
+                <ul class="menu">
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">About</a></li>
+                  <li><a href="#">Projects</a></li>
+                  <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+
+
+    </header>
 
 
   
