ft:home-page-This will add h and p tags on the home-page

--- a/index.html
+++ b/index.html
@@ -13,16 +13,28 @@
             <div class="max-width">
               <div class="logo"><a href="#">Port<span>folio</span></a></div>
                 <ul class="menu">
-                  <li><a href="#">Home</a></li>
+                  <li><a href="#" id="home">Home</a></li>
                   <li><a href="#">About</a></li>
                   <li><a href="#">Projects</a></li>
                   <li><a href="#">Contact</a></li>
                 </ul>
             </div>
         </nav>
-
-
     </header>
+
+    <!-- Home Section -->
+    <div class="home">
+        <div class="max-width">
+            <div class="home-content">
+                <h4>Hello, I am</h4>
+                <h2>Hope Achieng' Pete</h2>
+                <h3>And I'm a Full Stack Web Developer</h3>
+
+            </div>
+
+        </div>
+
+    </div>
 
 
   
