st:profile image-This commit will style the profile image on the home page

--- a/index.html
+++ b/index.html
@@ -26,14 +26,12 @@
     <div class="home">
         <div class="max-width">
             <div class="home-content">
-                <h4>Hello, I am</h4>
-                <h2>Hope Achieng' Pete</h2>
-                <h3>And I'm a Full Stack Web Developer</h3>
-
+                <h4 class="text-1">Hello, I am</h4>
+                <h2 class="text-2">Hope Achieng' Pete</h2>
+                <h3 class="text-3">And I'm a <span>Full Stack Web Developer</span></h3>
             </div>
-
         </div>
-
+        <img id="profile" src="./Images/pic2.png" height="500px" width="500px">
     </div>
 
 
