ft:about page-This will add an image and p tag on the about page

--- a/index.html
+++ b/index.html
@@ -34,6 +34,22 @@
         <img id="profile" src="./Images/pic2.png" height="500px" width="500px">
     </div>
 
+    <!-- About Section -->
+    <div class="about">
+        <div class="max-width">
+            <h2 class="title">About me</h2>
+            <div class="about-content">
+                <div class="column left">
+                    <img src="./Images/hope2.jpg">
+                </div>
+                <div class="column right">
+                   <p>My name is Hope Achieng Pete. I have a Bachelor's degree in Business & Information Technology from Multimedia University of Kenya and currently a student at Moringa School pursuing Software Development.I have an experience in working with an E-commerce company in the marketing sector of which I was responsible for managing the development and maintenance of the online store and also tasked with coming up with new marketing strategies based on the review of business analytics.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
   
     <script src="./main.js"></script>
