st:about-image-This will style the about image

--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyPortfolio</title> 
+    <link rel="stylesheet" href="./CSS/bootstrap.css"> 
     <link rel="stylesheet" type="text/css" href="./CSS/style.css"> 
 </head>
 <body>
     <header>
         <nav class="navbar">
             <div class="max-width">
-              <div class="logo"><a href="#">Port<span>folio</span></a></div>
+              
+              <div class="logo-text"><a href="#">Port<span>folio</span></a></div>
                 <ul class="menu">
                   <li><a href="#" id="home">Home</a></li>
                   <li><a href="#">About</a></li>
@@ -42,9 +44,7 @@
                 <div class="column left">
                     <img src="./Images/hope2.jpg">
                 </div>
-                <div class="column right">
-                   <p>My name is Hope Achieng Pete. I have a Bachelor's degree in Business & Information Technology from Multimedia University of Kenya and currently a student at Moringa School pursuing Software Development.I have an experience in working with an E-commerce company in the marketing sector of which I was responsible for managing the development and maintenance of the online store and also tasked with coming up with new marketing strategies based on the review of business analytics.</p>
-                </div>
+               
             </div>
         </div>
     </div>
