ft:text_about-This will add p tags on the about page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
                 <div class="column left">
                     <img src="./Images/hope2.jpg">
                 </div>
-               
+                <div class="column right">
+                    <p id="text">My name is Hope Achieng' Pete. I have a Bachelor's degree in Business & Information Technology from Multimedia University of Kenya and currently a student at Moringa School pursuing Software Development.<br>I have the experience of working as a marketing specialist in an E-commerce company and I was tasked with daily responsibilities such as developing, monitoring, writing and updating product content contained the website and also coming up with new marketing strategies based on the review of business analytics.<br>My journey into programming started five years ago when I enrolled in the university to pursue my degree.This opened my eyes to the world of softwares and technology that I had never truly explored before.I dived right in and never looked back.Since then I have always been passionate about solving problems through the use of technology.Software development has been my passion ever since.I am fascinated with coding.I have always strived to fulfil my dreams of becoming a software engineer which mainly includes building,testing,and maintaining softwares.<br>I spend my leisure time mostly at home watching motivational videos, reading various books, listening to music and exercising and at times meditating.<br>In essence , I am budding flower ready to open and bloom and saw try me!!! </p>
+                 </div>
             </div>
         </div>
     </div>
