st:social media icons-This commit will style the social media icons

--- a/index.html
+++ b/index.html
@@ -128,7 +128,16 @@
                                 <h5 class="head">Email</h5>
                                 <h6 class="sub-title">hope.pete@student.moringaschool.com</h6>
                             </div>
+                         </div><br>
+                         <div class="social-icon">
+                            <i class="fa fa-whatsapp"></i>
+                            <i class="fa fa-facebook"></i>
+                            <i class="fa fa-twitter"></i>
+                            <i class="fa fa-instagram"></i>
+                            <i class="fa fa-telegram"></i>
+                            <i class="fa fa-linkedin"></i>
                          </div>
+                        
 
                      </div>
                 </div>
