st:form-This will style the form in the contact page

--- a/index.html
+++ b/index.html
@@ -143,12 +143,13 @@
                 </div>
                 <div class="column right">
                     <form>
-                        <label>Enter your email*</label>
+                        <label>Enter your email*</label><br>
                         <input type="email" placeholder="example@gmail.com" name=""><br><br>
-                        <textarea placeholder="Enter your message"></textarea><br><br>
+                        <label>Enter your email*</label><br>
+                        <textarea rows="6" cols="30" placeholder="comment..." name="comment"></textarea><br><br>
                         <button class="button" type="submit">Submit</button>
                     </form>
-                </div>
+                </div
             </div>
     </div>
 </div>
