--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+    <div class="scroll-up-button">
+        <i class="fa fa-angle-up"></i>
+    </div>
 
     <!-- Header section -->
         <nav class="navbar">
@@ -107,6 +110,7 @@
         <h2 class="title">Contact me</h2>
            <div class="contact-content">
                <div class="column left">
+
                      <div class="icons">
                          <div class="row">
                             <i class="fa fa-user"></i>
@@ -137,25 +141,28 @@
                             <i class="fa fa-telegram"></i>
                             <i class="fa fa-linkedin"></i>
                          </div>
-                        
-
-                     </div>
+                    </div>
                 </div>
+
                 <div class="column right">
                     <form>
                         <label>Enter your email*</label><br>
                         <input type="email" placeholder="example@gmail.com" name=""><br><br>
-                        <label>Enter your email*</label><br>
+                        <label>Enter your message*</label><br>
                         <textarea rows="6" cols="30" placeholder="comment..." name="comment"></textarea><br><br>
                         <button class="button" type="submit">Submit</button>
                     </form>
-                </div
+                </div>
             </div>
     </div>
 </div>
 
+<!-- Footer section -->
+<footer>
+    <span>Created By <span id="copyright">Hope Achieng' Pete </span> | <i class="fa fa-copyright"></i></a> 2022 All Rights Reserved.</span>
+</footer>
 
-<!-- <li><a href="#home"><i class="fa fa-toggle-up"></i></a></li>   -->
+
 <script src="./main.js"></script>
 </body>
 </html>
