--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>MyPortfolio</title> 
     <link rel="stylesheet" href="./CSS/bootstrap.css"> 
     <link rel="stylesheet" type="text/css" href="./CSS/style.css"> 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -163,7 +164,7 @@
 </footer>
 
 
-<script src="./main.js"></script>
+<script src="/main.js"></script>
 </body>
 </html>
 
