--- a/index.html
+++ b/index.html
@@ -7,22 +7,23 @@
     <title>MyPortfolio</title> 
     <link rel="stylesheet" href="./CSS/bootstrap.css"> 
     <link rel="stylesheet" type="text/css" href="./CSS/style.css"> 
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
 </head>
 <body>
+
+    <!-- Scroll up button -->
     <div class="scroll-up-button">
-        <i class="fa fa-angle-up"></i>
+        <i class="fa fa-arrow-up"></i>
     </div>
 
-    <!-- Header section -->
+  <!-- Header section -->
         <nav class="navbar">
             <div class="max-width">
-              
-              <div class="logo"><a href="#">Port<span>folio</span></a></div>
+                <div class="logo"><a href="#">Port<span>folio</span></a></div>
                 <ul class="menu">
-                  <li><a href="#" id="home">Home</a></li>
+                  <li><a href="#home" >Home</a></li>
                   <li><a href="#about">About</a></li>
                   <li><a href="#project">Projects</a></li>
                   <li><a href="#contact">Contact</a></li>
@@ -40,7 +41,7 @@
             <div class="home-content">
                 <h4 class="text-1">Hello, I am</h4>
                 <h2 class="text-2">Hope Achieng' Pete</h2>
-                <h3 class="text-3">And I'm a <span>Full Stack Web Developer</span></h3>
+                <h3 class="text-3">And I'm a <span class="typing"></span></h3>
             </div>
         </div>
         <img id="profile" src="./Images/pic2.png" height="500px" width="500px">
@@ -55,7 +56,7 @@
                     <img src="./Images/hope2.jpg">
                 </div>
                 <div class="column right">
-                    <p id="text">My name is Hope Achieng' Pete. I have a Bachelor's degree in Business & Information Technology from Multimedia University of Kenya and currently a student at Moringa School pursuing Software Development.<br>I have the experience of working as a marketing specialist in an E-commerce company and I was tasked with daily responsibilities such as developing, monitoring, writing and updating product content contained on the website and also coming up with new marketing strategies based on the review of business analytics.<br>My journey into programming started five years ago when I enrolled in the university to pursue my degree.This opened my eyes to the world of softwares and technology that I had never truly explored before.I dived right in and never looked back.Since then I have always been passionate about solving problems through the use of technology.Software development has been my passion ever since.I am fascinated with coding.I have always strived to fulfil my dreams of becoming a software engineer which mainly includes building,testing,and maintaining softwares.<br>I spend my leisure time mostly at home watching motivational videos, reading various books, listening to music and exercising and at times meditating.<br>In essence , I am budding flower ready to open and bloom and so try me!!! </p>
+                    <p id="text">My name is Hope Achieng' Pete. I have a Bachelor's degree in Business & Information Technology from Multimedia University of Kenya and currently a student at Moringa School pursuing Software Development.<br>I have the experience of working as a marketing specialist in an E-commerce company and I was tasked with daily responsibilities such as developing, monitoring, writing and updating product content contained on the website and also coming up with new marketing strategies based on the review of business analytics.<br>My journey into programming started six years ago when I enrolled in the university to pursue my degree.This opened my eyes to the world of softwares and technology that I had never truly explored before.I dived right in and never looked back.Since then I have always been passionate about solving problems through the use of technology.Software development has been my passion ever since.I am fascinated with coding.I have always strived to fulfil my dreams of becoming a software engineer which mainly includes building,testing,and maintaining softwares.<br>I spend my leisure time mostly at home watching motivational videos, reading various books, listening to music and exercising and at times meditating.<br>In essence , I am budding flower ready to open and bloom and so try me!!! </p>
                  </div>
             </div>
         </div>
@@ -70,7 +71,7 @@
             <div class="project-content">
 
                 <div class="box" id="box1">
-                    <div class="txt">Burger Palace</div>
+                    <h5 class="txt">Burger Palace</h5>
                     <img src="./Images/web1.png">
                     <p>A website that allows restaurant businesses to accept and manage orders(burgers) placed over the internet.</p>
                     <h6>HTML5 & CSS3</h6>
@@ -78,7 +79,7 @@
                 </div>
 
                 <div class="box" id="box2">
-                    <div class="txt">Insurance Website</div>
+                    <h5 class="txt">Insurance Website</h5>
                     <img src="./Images/web2.png">
                    <p>An insurance website to connect with customers,nurture new leads and grow your business.</p>
                     <h6>HTML5 & CSS3</h6>
@@ -86,7 +87,7 @@
                 </div>
 
                 <div class="box" id="box3">
-                    <div class="txt">Quiz Board</div>
+                    <h5 class="txt">Quiz Board</h5>
                     <img src="./Images/web3.png">
                    <p>This is an online quiz that can be used as a bief assessment in matters JavaScript programming language.</p>
                     <h6>HTML5, CSS3 & JAVASCRIPT</h6>
@@ -94,7 +95,7 @@
                 </div>
 
                 <div class="box" id="box4">
-                    <div class="txt">Digi-Fua</div>
+                    <h5 class="txt">Digi-Fua</h5>
                     <img src="./Images/web4.png">
                     <p>It is a website that enables customers to place their laundry orders on the go.</p>
                     <h6>HTML5, CSS3 & JAVASCRIPT</h6>
@@ -116,30 +117,30 @@
                          <div class="row">
                             <i class="fa fa-user"></i>
                             <div class="info">
-                                <h5 class="head">Name</h5>
-                                <h6 class="sub-title">Hope Achieng' Pete</h6>
+                                <h5>Name</h5>
+                                <h6>Hope Achieng' Pete</h6>
                             </div>
                          </div><br>
                          <div class="row">
                             <i class="fa fa-phone"></i>
                             <div class="info">
-                                <h5 class="head">Telephone</h5>
-                                <h6 class="sub-title">0717832352</h6>
+                                <h5>Telephone</h5>
+                                <h6>0717832352</h6>
                             </div>
                          </div><br>
                          <div class="row">
                             <i class="fa fa-envelope"></i>
                             <div class="info">
-                                <h5 class="head">Email</h5>
-                                <h6 class="sub-title">hope.pete@student.moringaschool.com</h6>
+                                <h5>Email</h5>
+                                <h6>hope.pete@student.moringaschool.com</h6>
                             </div>
                          </div><br>
                          <div class="social-icon">
                             <i class="fa fa-whatsapp"></i>
+                            <i class="fa fa-telegram"></i>
                             <i class="fa fa-facebook"></i>
                             <i class="fa fa-twitter"></i>
                             <i class="fa fa-instagram"></i>
-                            <i class="fa fa-telegram"></i>
                             <i class="fa fa-linkedin"></i>
                          </div>
                     </div>
@@ -151,7 +152,7 @@
                         <input type="email" placeholder="example@gmail.com" name=""><br><br>
                         <label>Enter your message*</label><br>
                         <textarea rows="6" cols="30" placeholder="comment..." name="comment"></textarea><br><br>
-                        <button class="button" type="submit">Submit</button>
+                        <button class="button" type="submit">Send message</button>
                     </form>
                 </div>
             </div>
@@ -164,7 +165,7 @@
 </footer>
 
 
-<script src="/main.js"></script>
+<script src="./main.js"></script>
 </body>
 </html>
 
