st:media responsiveness

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <img src="./Images/hope2.jpg">
                 </div>
                 <div class="column right">
-                    <p id="text">My name is Hope Achieng' Pete. I have a Bachelor's degree in Business & Information Technology from Multimedia University of Kenya and currently a student at Moringa School pursuing Software Development.<br>I have the experience of working as a marketing specialist in an E-commerce company and I was tasked with daily responsibilities such as developing, monitoring, writing and updating product content contained on the website and also coming up with new marketing strategies based on the review of business analytics.<br>My journey into programming started six years ago when I enrolled in the university to pursue my degree.This opened my eyes to the world of softwares and technology that I had never truly explored before.I dived right in and never looked back.Since then I have always been passionate about solving problems through the use of technology.Software development has been my passion ever since.I am fascinated with coding.I have always strived to fulfil my dreams of becoming a software engineer which mainly includes building,testing,and maintaining softwares.<br>I spend my leisure time mostly at home watching motivational videos, reading various books, listening to music and exercising and at times meditating.<br>In essence , I am budding flower ready to open and bloom and so try me!!! </p>
+                    <p class="text" id="text">My name is Hope Achieng' Pete. I have a Bachelor's degree in Business & Information Technology from Multimedia University of Kenya and currently a student at Moringa School pursuing Software Development.<br>I have the experience of working as a marketing specialist in an E-commerce company and I was tasked with daily responsibilities such as developing, monitoring, writing and updating product content contained on the website and also coming up with new marketing strategies based on the review of business analytics.<br>My journey into programming started six years ago when I enrolled in the university to pursue my degree.This opened my eyes to the world of softwares and technology that I had never truly explored before.I dived right in and never looked back.Since then I have always been passionate about solving problems through the use of technology.Software development has been my passion ever since.I am fascinated with coding.I have always strived to fulfil my dreams of becoming a software engineer which mainly includes building,testing,and maintaining softwares.<br>I spend my leisure time mostly at home watching motivational videos, reading various books, listening to music and exercising and at times meditating.<br>In essence , I am budding flower ready to open and bloom and so try me!!! </p>
                  </div>
             </div>
         </div>
@@ -75,7 +75,7 @@
                     <img src="./Images/web1.png">
                     <p>A website that allows restaurant businesses to accept and manage orders(burgers) placed over the internet.</p>
                     <h6>HTML5 & CSS3</h6>
-                    <a href="https://achiengy.github.io/Burger-Palace/" target="blank">Link to live site</a>
+                    <a href="https://achiengy.github.io/Burger-Palace/" target="blank">View Project</a>
                 </div>
 
                 <div class="box" id="box2">
@@ -83,7 +83,7 @@
                     <img src="./Images/web2.png">
                    <p>An insurance website to connect with customers,nurture new leads and grow your business.</p>
                     <h6>HTML5 & CSS3</h6>
-                    <a href="https://achiengy.github.io/Insurance-website/" target="blank">Link to live site</a>
+                    <a href="https://achiengy.github.io/Insurance-website/" target="blank">LView Project</a>
                 </div>
 
                 <div class="box" id="box3">
@@ -91,7 +91,7 @@
                     <img src="./Images/web3.png">
                    <p>This is an online quiz that can be used as a bief assessment in matters JavaScript programming language.</p>
                     <h6>HTML5, CSS3 & JAVASCRIPT</h6>
-                    <a href="https://achiengy.github.io/QuizBoard" target="blank">Link to live site</a>
+                    <a href="https://achiengy.github.io/QuizBoard" target="blank">View Project</a>
                 </div>
 
                 <div class="box" id="box4">
@@ -99,7 +99,7 @@
                     <img src="./Images/web4.png">
                     <p>It is a website that enables customers to place their laundry orders on the go.</p>
                     <h6>HTML5, CSS3 & JAVASCRIPT</h6>
-                    <a href="https://achiengy.github.io/Digi-Fua/" target="blank">Link to live site</a>
+                    <a href="https://achiengy.github.io/Digi-Fua/" target="blank">View Project</a>
                 </div>
                 
             </div>
@@ -147,11 +147,11 @@
                 </div>
 
                 <div class="column right">
-                    <form>
+                    <form name="form">
                         <label>Enter your email*</label><br>
-                        <input type="email" placeholder="example@gmail.com" name=""><br><br>
+                        <input type="email" placeholder="example@gmail.com" name="" class="email"><br><br>
                         <label>Enter your message*</label><br>
-                        <textarea rows="6" cols="30" placeholder="comment..." name="comment"></textarea><br><br>
+                        <textarea type="text" rows="6" cols="30" placeholder="comment..." name="comment" class="text"></textarea><br><br>
                         <button class="button" type="submit">Send message</button>
                     </form>
                 </div>
@@ -161,7 +161,7 @@
 
 <!-- Footer section -->
 <footer>
-    <span>Created By <span id="copyright">Hope Achieng' Pete </span> | <i class="fa fa-copyright"></i></a> 2022 All Rights Reserved.</span>
+    <span>Designed By <span id="copyright">Hope Achieng' Pete </span> | <i class="fa fa-copyright"></i></a> 2022 All Rights Reserved.</span>
 </footer>
 
 
